--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "android": "expo start -c --android",
     "ios": "expo start -c --ios",
     "web": "expo start -c --web",
-    "clean": "rm -rf .expo node_modules"
+    "clean": "rm -rf .expo node_modules",
+    "dev:server": "ts-node-dev --respawn --transpile-only server/index.ts"
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.16.1",
+    "@clerk/clerk-sdk-node": "^5.1.6",
+    "@clerk/express": "^1.7.60",
     "@neondatabase/serverless": "^1.0.2",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/avatar": "^1.2.0",
     "@rn-primitives/label": "^1.2.0",
@@ -36,6 +40,7 @@
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
     "express": "^5.2.1",
+    "localtunnel": "^2.0.2",
     "lucide-react-native": "^0.545.0",
     "nativewind": "^4.2.1",
     "pg": "^8.16.3",
@@ -55,10 +60,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/react": "~19.1.10",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "ts-node-dev": "^2.0.0",
     "typescript": "~5.9.2"
   },
   "private": true
