--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/separator": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
+    "@types/react-native": "^0.73.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -31,8 +32,13 @@
     "drizzle-orm": "^0.45.1",
     "expo": "~54.0.29",
     "expo-auth-session": "~7.0.10",
-    "expo-constants": "~18.0.12",
+    "expo-constants": "^18.0.12",
+    "expo-device": "^8.0.10",
+    "expo-image-picker": "^17.0.10",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.10",
+    "expo-location": "^19.0.8",
+    "expo-notifications": "^0.32.15",
     "expo-router": "~6.0.19",
     "expo-secure-store": "~15.0.8",
     "expo-splash-screen": "~31.0.12",
@@ -47,11 +53,13 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-maps": "^1.26.20",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
+    "react-native-webview": "^13.16.0",
     "react-native-worklets": "0.5.1",
     "svix": "^1.82.0",
     "tailwind-merge": "^3.3.1",
