--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "expo start -c",
+    "start:go": "expo start --go",
     "android": "expo start -c --android",
     "ios": "expo start -c --ios",
     "web": "expo start -c --web",
@@ -14,8 +15,11 @@
     "@clerk/clerk-expo": "^2.16.1",
     "@clerk/clerk-sdk-node": "^5.1.6",
     "@clerk/express": "^1.7.60",
+    "@clerk/shared": "^3.41.1",
+    "@googlemaps/react-native-navigation-sdk": "^0.12.1",
     "@neondatabase/serverless": "^1.0.2",
     "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/avatar": "^1.2.0",
     "@rn-primitives/label": "^1.2.0",
@@ -33,11 +37,12 @@
     "expo": "~54.0.29",
     "expo-auth-session": "~7.0.10",
     "expo-constants": "^18.0.12",
+    "expo-dev-client": "~6.0.20",
     "expo-device": "^8.0.10",
     "expo-image-picker": "^17.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.10",
-    "expo-location": "^19.0.8",
+    "expo-location": "~19.0.8",
     "expo-notifications": "^0.32.15",
     "expo-router": "~6.0.19",
     "expo-secure-store": "~15.0.8",
@@ -47,19 +52,22 @@
     "expo-web-browser": "~15.0.10",
     "express": "^5.2.1",
     "localtunnel": "^2.0.2",
+    "lucide-react": "^0.562.0",
     "lucide-react-native": "^0.545.0",
     "nativewind": "^4.2.1",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-maps": "^1.26.20",
+    "react-native-maps": "1.20.1",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-permissions": "^5.4.4",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
-    "react-native-webview": "^13.16.0",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
     "svix": "^1.82.0",
     "tailwind-merge": "^3.3.1",
